Header tagline alignment fix

--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -13664,6 +13664,7 @@ button.navbar-toggler.collapsed .icon-expand {
     display: block;
     font-size: 14px;
     padding-left: 46px;
+    margin-left: 40px;
     font-weight: 600;
     opacity: .9;
 }
